--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,74 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Roshan M S B
     - name: Date of Birth
-      value: 14th March 1879
+      value: 7th August 1999
     - name: Languages
-      value: English, German
+      value: English, Tamil, Malayalam, Hindi
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: Indian Institute of Technology, Madras
+      year: 2021 - Present
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - AI/ML for Biotechnology
+        - title: <b>Teaching Assistant:</b>
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+            - Big Data and Biological Networks, Multivariate Data Analysis, Industrial AI Laboratory, Programming for Biological Engineers, Bio-process Control, Current Topics in Synthetic Biology
+    - title: Bachelor of Technology
+      institution: National Institute of Technology, Calicut
+      year: 2017 - 2021
       description:
-        - Description 1.
-        - Description 2.
+        -  <a href="https://drive.google.com/file/d/1HJSHQV7Z3cJhvjrrh6HcZ2ialQwyx05J/view?usp=sharing">Gold Medalist</a>
+        - title: <b>Core Courses:</b>
+          contents:
+              -  Bioinformatics, Bio-signal Processing, Biostatistics, Bioreactor Design and Analysis        
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Intern
+      institution: Boltzmann Labs, Bangalore, India
+      year: June 2020 - Nov 2020
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+        - Developing algorithms for drug discovery using deep learning
+        - Implementing and testing algorithms on large datasets for drug discovery using the PyTorch Lightning framework
+
+    - title: Research Intern
+      institution: Swagene, Chennai, India
+      year: April 2019 - July 2019
       description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+        - Research and Development into novel molecular diagnostics focusing on cancer
+        - Executed research projects critically and collaborated with labs while maintaining precise documentation
 
 - title: Open Source Projects
   type: time_table
   contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: <a href="https://github.com/boltzmannlabs/molpro">MolPro</a>
+      year: 2020-now
+      description: Python package to accelerate drug discovery using deep learning algorithms
 
-- title: Honors and Awards
-  type: time_table
-  contents:
-    - year: 1921
-      items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
-      items: 
-        - Max Planck Medal
-
-- title: Academic Interests
+- title: Technical Skills
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: <b>Programming Languages:</b>
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - C++, Python, R, awk, MATLAB
+    - title: <b>Libraries and Frameworks:</b>
+      items: 
+        - PyTorch, pytorch-geometric, Keras, scikit-learn, NLTK, networkx, Django, REST
+    - title: <b>Miscellaneous:</b>
+      items: 
+        - Linux OS, Git
 
-- title: Other Interests
+- title: Positions of Responsibility
   type: list
   contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - <b>Organizer and Reviewer:</b> <a href="https://sites.google.com/view/gclr2023/organizers?authuser=0">GCLR Workshop 2023</a> at Thirty-Seventh AAAI Conference on Artificial Intelligence
+    - <b>Research Legislator:</b> Department of Biotechnology, IIT Madras
+    - <b>Mentor:</b> <a href="https://drive.google.com/file/d/1_nSbT1WdKqYWq96r-sPtXniOke8QRMkO/view?usp=drive_link">Teach in 10</a>, IIT Madras
+    - <b>Member:</b> <a href="https://rbcdsai.iitm.ac.in/people/roshan-msb/">RBCDSAI</a> and <a href="https://ibse.iitm.ac.in/people/roshan/">IBSE</a>, IIT Madras
+    - <b>Technical Affairs Secretary:</b> School of Biotechnology, NIT Calicut (Aug 2018 - Aug 2019)
