Update navigation and news

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,7 +18,7 @@
         - AI/ML for Biotechnology
         - title: <b>Teaching Assistant:</b>
           contents:
-            - Big Data and Biological Networks, Multivariate Data Analysis, Industrial AI Laboratory, Programming for Biological Engineers, Bio-process Control, Current Topics in Synthetic Biology
+            - <a href="https://www.youtube.com/playlist?list=PLZ2ps__7DhBapdXdBZInSjonWNAUL6Ycm">Big Data and Biological Networks</a>, Multivariate Data Analysis, Industrial AI Laboratory, Programming for Biological Engineers, Bio-process Control, Current Topics in Synthetic Biology
     - title: Bachelor of Technology
       institution: National Institute of Technology, Calicut
       year: 2017 - 2021
